Fixed layout issue

--- a/classification-demo-server/classification-demo-web/src/main/ngapp/src/app/news-table/news-table.component.css
+++ b/classification-demo-server/classification-demo-web/src/main/ngapp/src/app/news-table/news-table.component.css
@@ -4,3 +4,11 @@
 .newssites button {
   margin: 16px;
 }
+
+.icon {
+  vertical-align: middle;
+}
+
+.link {
+  margin: 6px;
+}
